# LightYears

./: CMakeLists.txt
LightYears/: CMakeLists.txt
LightYears/include/framework/: Application.cpp  Application.h
LightYears/src/: main.cpp
LightYears/src/framework/: Application.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/VFX/: Particle.h
LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  Delegate.h  MathUtility.h  Object.h  PhysicsSystem.h  TimerManager.h  World.h
LightYearsEngine/include/gameplay/: GameStage.h  WaitStage.h
LightYearsEngine/include/widgets/: HUD.h  Widget.h  WidgetButton.h  WidgetImage.h  WidgetText.h  WidgetValueGauge.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/VFX/: Particle.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  Core.cpp  Delegate.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  TimerManager.cpp  World.cpp
LightYearsEngine/src/gameplay/: GameStage.cpp  WaitStage.cpp
LightYearsEngine/src/widgets/: HUD.cpp  Widget.cpp  WidgetButton.cpp  WidgetImage.cpp  WidgetText.cpp  WidgetValueGauge.cpp
LightYearsGame/: CMakeLists.txt  Config.h.in
LightYearsGame/include/: config.h
LightYearsGame/include/VFX/: Explosion.h
LightYearsGame/include/enemy/: Boss.h  BossStage.h  ChaosStage.h  EnemySpaceship.h  Hexagon.h  HexagonStage.h  TwinBlade.h  TwinBladeStage.h  UFO.h  UFOStage.h  Vanguard.h  VanguardStage.h
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/include/gameplay/: HealthComponent.h
LightYearsGame/include/level/: GameLevelOne.h  MainMenuLevel.h
LightYearsGame/include/player/: Player.h  PlayerManager.h  PlayerSpaceship.h
LightYearsGame/include/reward/: Reward.h
LightYearsGame/include/spaceship/: Spaceship.h
LightYearsGame/include/weapon/: Bullet.h  BulletShooter.h  FrontalWiperShooter.h  Shooter.h  ThreeWayShooter.h
LightYearsGame/include/widgets/: GameplayHUD.h  MainMenuHUD.h
LightYearsGame/src/VFX/: Explosion.cpp
LightYearsGame/src/enemy/: Boss.cpp  BossStage.cpp  ChaosStage.cpp  EnemySpaceship.cpp  Hexagon.cpp  HexagonStage.cpp  TwinBlade.cpp  TwinBladeStage.cpp  UFO.cpp  UFOStage.cpp  Vanguard.cpp  VanguardStage.cpp
LightYearsGame/src/gameFramework/: GameApplication.cpp
LightYearsGame/src/gameplay/: HealthComponent.cpp
LightYearsGame/src/level/: GameLevelOne.cpp  MainMenuLevel.cpp
LightYearsGame/src/player/: Player.cpp  PlayerManager.cpp  PlayerSpaceship.cpp
LightYearsGame/src/reward/: Reward.cpp
LightYearsGame/src/spaceship/: Spaceship.cpp
includes/framework/: Application.hpp
(+7 files in other folders)
